--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "@mui/material": "5.5.1",
     "@react-hook/toggle": "2.0.1",
     "@types/file-saver": "2.0.5",
+    "@types/jest": "^27.4.1",
+    "@types/node": "^17.0.23",
+    "@typescript-eslint/parser": "^5.18.0",
+    "babel-eslint": "^10.1.0",
     "copy-to-clipboard": "3.3.1",
     "detect-newline": "4.0.0",
     "file-saver": "2.0.5",
@@ -30,9 +34,10 @@
     "react-scripts": "4.0.3"
   },
   "devDependencies": {
-    "@types/react": "17.0.20",
-    "@types/react-dom": "17.0.9",
-    "typescript": "4.4.2"
+    "@types/react": "^17.0.44",
+    "@types/react-dom": "^17.0.15",
+    "@typescript-eslint/eslint-plugin": "^5.18.0",
+    "typescript": "^4.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
