--- a/package.json
+++ b/package.json
@@ -51,5 +51,5 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "proxy": "http://localhost:8081"
+  "proxy": "https://m2ga-backend.wittydesert-e3592299.eastasia.azurecontainerapps.io"
 }
