--- a/package.json
+++ b/package.json
@@ -50,5 +50,6 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "proxy": "https://m2ga-backend.wittydesert-e3592299.eastasia.azurecontainerapps.io"
 }
